update index remotely

--- a/index.html
+++ b/index.html
@@ -92,8 +92,19 @@
 									<ul class="actions special">
 										<li><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="button">View Project</a></li>
 									</ul>
-								</article>
-								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://www.youtube.com/watch?v=7HaF127CJKc&t=192s">Data Cleaning In Sql<br />
+										</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=7HaF127CJKc&t=192s" class="image fit"><img src="images/sql image.png" alt="" /></a>
+									<p>In this project,I explained how errors can be discovered from tables in databases.</p>
+									<ul class="actions special">
+									<li><a href="https://www.youtube.com/watch?v=7HaF127CJKc&t=192s" class="button">View Project</a></li>
+									</ul>
+								</ul>
+							</article>
+							<article>
 									
 							</section>
 
