--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Louis Adibe<br />
 						</h1>
 						<h1>----------About Me---------- </h1>
-					<p>I am  passionate about using data to solve problems,am currently a master's student at<br/>
+					<p>   Hi  I am  Louis  and I love machine learning and data engineering,am currently a master's student at<br/>
 						  Hongkong Baptist university studying Data Analytics And Artificial Intelligence my journey into <br/> 
 						  data started in 2019 after I moved to hongkong and joined xccelerate to take part in a 3 months <br/> 
 						  Data Science & Machine learning bootcamp.<br/>
