--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<a href="https://public.tableau.com/app/profile/loui1661/viz/TableauvisualizationofHonkongSalaryData/Dashboard32" class="image fit"><img src="images1/Visual.png" alt="" /></a>
 								<p>In this project,I created and designed a dashboard</p>
 								<ul class="actions special">
-								<li><a href="https://public.tableau.com/app/profile/loui1661/viz/TableauvisualizationofHonkongSalaryData/Dashboard32" class="button">View Dashboard</a></li>
+								<li><a href="https://public.tableau.com/app/profile/loui1661/viz/TableauvisualizationofHonkongSalaryData/Dashboard32" class="button">View Project</a></li>
 								</ul>
 								</article>
 								<article>
