--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
 									<ul class="actions special">
 									<li><a href="https://www.youtube.com/watch?v=7HaF127CJKc&t=192s" class="button">View Project</a></li>
 									</ul>
+
+
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37">Data Mining With Clustering<br />
+										</a></h2>
+									</header>
+									<a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37" class="image fit"><img src="images1/Clustering Image.png" alt="" /></a>
+									<p>In this project,I explained how data mining can be implemented using K-means clustering algorithm.</p>
+									<ul class="actions special">
+									<li><a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37" class="button">View Project</a></li>
+									</ul>
 								</ul>
 							</article>
 							<article>
