Update to KNN Project

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 						<h1>Louis Adibe<br />
 						</h1>
 						<h1>----------About Me---------- </h1>
-					<p>   Hi I am  Louis Adibe, I love machine learning,data engineering and data analytics<br/>
+					<p>   Hi I am  Louis Adibe, I am  experienced in machine learning,data engineering and data analytics<br/>
 					      I am  passionate about using data to solve problems,am currently a master's student<br/>
 						  at Hongkong Baptist university studying Data Analytics And Artificial Intelligence <br/> 
-						  my journey into data started in 2019 after I joined xccelerate to take part in a 3 <br/>
+						  my journey into data started in 2019 after I joined Xccelerate to take part in a 3 <br/>
 						  months  Data Science & Machine learning bootcamp,please explore my projects below. <br/>
 				    
 						
@@ -80,8 +80,6 @@
 									<ul class="actions special">
 										<li><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="button">View Project</a></li>
 									</ul>
-
-		
 								</ul>
 								<header>
 									<span class="date"></span>
@@ -95,6 +93,17 @@
 								</ul>
 								</article>
 								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="https://nbviewer.org/github/Louis192/Model_comparison/blob/master/Model_Comparison%20.ipynb">Model Comparison in KNN<br />
+										</a></h2>
+									</header>
+									<a href="https://nbviewer.org/github/Louis192/Model_comparison/blob/master/Model_Comparison%20.ipynb" class="image fit"><img src="images1/KNN.png" alt="" /></a>
+									<p>In this project,I implemented how to compare KNN models in Python.</p>
+									<ul class="actions special">
+									<li><a href="https://nbviewer.org/github/Louis192/Model_comparison/blob/master/Model_Comparison%20.ipynb" class="button">View Project</a></li>
+									</ul>
+								</ul>
 									<header>
 										<span class="date"></span>
 										<h2><a href="https://medium.com/@okezten/us-census-data-classification-income-level-prediction-a63703bb8b4c">Income Level Prediction: Analysis of USA Census Data<br />
@@ -127,6 +136,7 @@
 									<ul class="actions special">
 									<li><a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37" class="button">View Project</a></li>
 									</ul>
+
 								</ul>
 							</article>
 							<article>
