push to nbviewer

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 								</ul>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://medium.com/@okezten/us-census-data-classification-income-level-prediction-a63703bb8b4c">Income Level Prediction: Analysis of USA Census Data<br />
+										<h2><a href="https://nbviewer.org/github/Louis192/US_incomeLevelprediction/blob/main/US_incomeLevelprediction.ipynb">Income Level Prediction: Analysis of USA Census Data<br />
 										</a></h2>
 									</header>
-									<a href="https://medium.com/@okezten/us-census-data-classification-income-level-prediction-a63703bb8b4c" class="image fit"><img src="images1/USA _IMAGE.png" alt="" /></a>
+									<a href="https://nbviewer.org/github/Louis192/US_incomeLevelprediction/blob/main/US_incomeLevelprediction.ipynb" class="image fit"><img src="images1/USA _IMAGE.png" alt="" /></a>
 									<p>In this project,I built a classification model using logistic regression algorithm,the model will be able to generalize and predict unseen data.</p>
 									<ul class="actions special">
-									<li><a href="https://medium.com/@okezten/us-census-data-classification-income-level-prediction-a63703bb8b4c" class="button">View Project</a></li>
+									<li><a href="https://nbviewer.org/github/Louis192/US_incomeLevelprediction/blob/main/US_incomeLevelprediction.ipynb" class="button">View Project</a></li>
 									</ul>
 									<header>
 										<span class="date"></span>
