--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 									<header>
 
 										<span class="date"></span>
-										<h2><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566">AVERAGE ANNUAL SALARY PREDICTION IN HONGKONG<br />
+										<h2><a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/master/AverageAnnualSalaryPredictionHK.ipynb">AVERAGE ANNUAL SALARY PREDICTION IN HONGKONG<br />
 										</a></h2>
 									</header>
-									<a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="image fit"><img src="images1/Resized hongkong image on Figma.png" alt="" /></a>
+									<a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/master/AverageAnnualSalaryPredictionHK.ipynb" class="image fit"><img src="images1/Resized hongkong image on Figma.png" alt="" /></a>
 									<p>In this project,I built a linear regression model that will predict the average annual salary of unseen dataset.</p>
 									<ul class="actions special">
-										<li><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="button">View Project</a></li>
+										<li><a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/master/AverageAnnualSalaryPredictionHK.ipynb" class="button">View Project</a></li>
 									</ul>
 								</ul>
 								<header>
