--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Louis Adibe<br />
 						</h1>
 						<h1>----------About Me---------- </h1>
-					<p>   Hi I am  Louis Adibe, I am  experienced in machine learning,data engineering and data analytics<br/>
+					<p>   Hi I am  Louis Adibe, I am  experienced in data engineering,data analytics and machine learning<br/>
 					      I am  passionate about using data to solve problems,am currently a master's student<br/>
 						  at Hongkong Baptist university studying Data Analytics And Artificial Intelligence <br/> 
 						  my journey into data started in 2019 after I joined Xccelerate to take part in a 3 <br/>
