--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37">Data Mining With Clustering<br />
+										<h2><a href="https://nbviewer.org/github/Louis192/KMEANS/blob/main/K-Means%20Clustering.ipynb">Data Mining With Clustering<br />
 										</a></h2>
 									</header>
-									<a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37" class="image fit"><img src="images1/Clustering Image.png" alt="" /></a>
+									<a href="https://nbviewer.org/github/Louis192/KMEANS/blob/main/K-Means%20Clustering.ipynb" class="image fit"><img src="images1/Clustering Image.png" alt="" /></a>
 									<p>In this project,I explained how data mining can be implemented using K-means clustering algorithm.</p>
 									<ul class="actions special">
-									<li><a href="https://medium.com/@okezten/k-means-clustering-aeedb4b9bb37" class="button">View Project</a></li>
+									<li><a href="https://nbviewer.org/github/Louis192/KMEANS/blob/main/K-Means%20Clustering.ipynb" class="button">View Project</a></li>
 									</ul>
 
 								</ul>
