--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 						<h1>Louis Adibe<br />
 						</h1>
 						<h1>----------About Me---------- </h1>
-					<p>   Hi I am  Louis Adibe, I am  experienced in data engineering,data analytics and machine learning<br/>
+					<p>   Hi I am  Louis Adibe, I am  experienced in Data engineering,Data Analytics and machine learning<br/>
 					      I am  passionate about using data to solve problems,am currently a master's student<br/>
 						  at Hongkong Baptist university studying Data Analytics And Artificial Intelligence <br/> 
-						  my journey into data started in 2019 after I joined Xccelerate to take part in a 3 <br/>
+						  my journey into data started in 2018.In 2019 I joined Xccelerate  to take part in a 3 <br/>
 						  months  Data Science & Machine learning bootcamp,please explore my projects below. <br/>
 				    
 						
@@ -70,17 +70,27 @@
 							<section class="posts">
 								<article>
 									<header>
-
 										<span class="date"></span>
-										<h2><a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/main/Average_AnnualSalaryPredictionHK.ipynb">AVERAGE ANNUAL SALARY PREDICTION IN HONGKONG<br />
+										<h2><a href="https://medium.com/@okezten/chatbot-9114e860f377">Chatbot<br />
 										</a></h2>
 									</header>
-									<a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/main/Average_AnnualSalaryPredictionHK.ipynb" class="image fit"><img src="images1/Resized hongkong image on Figma.png" alt="" /></a>
-									<p>In this project,I built a linear regression model that will predict the average annual salary of unseen dataset.</p>
+									<a href="https://medium.com/@okezten/chatbot-9114e860f377" class="image fit"><img src="images1/chatbot.png" alt="" /></a>
+									<p>This a a cloud engineering project where I built and deployed a chatbot.</p>
 									<ul class="actions special">
-										<li><a href="https://nbviewer.org/github/Louis192/Average_Annual_Salary_Hongkong/blob/main/Average_AnnualSalaryPredictionHK.ipynb" class="button">View Project</a></li>
+										<li><a href="https://medium.com/@okezten/chatbot-9114e860f377" class="button">View Project</a></li>
 									</ul>
 								</ul>
+								<header>
+									<span class="date"></span>
+									<h2><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566">Average annual salary<br />
+									</a></h2>
+								</header>
+								<a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="image fit"><img src="images1/Resized hongkong image on Figma.png" alt="" /></a>
+								<p>In this project I used multiple linear regression to predict average annual salary in Hongkong .</p>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@okezten/average-annual-salary-prediction-in-hongkong-6f50bd442566" class="button">View Project</a></li>
+								</ul>
+							</ul>
 								<header>
 									<span class="date"></span>
 									<h2><a href="https://public.tableau.com/app/profile/loui1661/viz/TableauvisualizationofHonkongSalaryData/Dashboard6">Data Visualization<br />
