--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										</a></h2>
 									</header>
 									<a href="https://medium.com/@okezten/chatbot-9114e860f377" class="image fit"><img src="images1/chatbot.png" alt="" /></a>
-									<p>This a a cloud engineering project where I built and deployed a chatbot.</p>
+									<p>This is a cloud engineering project where I built a chatbot and deployed to azure cloud.</p>
 									<ul class="actions special">
 										<li><a href="https://medium.com/@okezten/chatbot-9114e860f377" class="button">View Project</a></li>
 									</ul>
