--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article>
+
+										<header>
+											<span class="date"></span>
+											<h2><a href="https://github.com/Louis192/AnalysisWithSQL/blob/main/Database%20design.ipynb">Data analysis in Sql<br />
+											</a></h2>
+										</header>
+										<a href="https://github.com/Louis192/AnalysisWithSQL/blob/main/Database%20design.ipynb" class="image fit"><img src="images1/Dataanalysisinsql.png" alt="" /></a>
+										<p>The aim of this project is implement data analysis with SQL</p>
+										<ul class="actions special">
+											<li><a href="https://github.com/Louis192/AnalysisWithSQL/blob/main/Database%20design.ipynb" class="button">View Project</a></li>
+										</ul>
+									</ul>
+
+
 									<header>
 										<span class="date"></span>
 										<h2><a href="https://medium.com/@okezten/chatbot-9114e860f377">Chatbot<br />
