--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 										<header>
 											<span class="date"></span>
-											<h2><a href="https://medium.com/p/79505e0e3bda/edit">Machine Learning Model Deployment<br />
+											<h2><a href="https://github.com/AdventureLouis/Insurance_Model_Deployment">Machine Learning Model Deployment<br />
 											</a></h2>
 										</header>
 										<a href="https://medium.com/p/79505e0e3bda/edit" class="image fit"><img src="images1/Machine_Learning_Deployment.png" alt="" /></a>
